# APD-APP-Kikoeruca

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model.apd
app/src/main/cpp/: CMakeLists.txt  apd_inference.cpp  apd_inference.h  apd_kernels.cpp  apd_kernels.h  apd_model.h  jni_bridge.cpp
app/src/main/java/com/kikoeruca/debug/: APDEngine.kt  AudioCapture.kt  InferenceController.kt  MainActivity.kt  MeasurementService.kt  RingGaugeView.kt
app/src/main/res/color/: switch_track_color.xml
app/src/main/res/drawable/: bg_circle_start.xml  bg_menu_card.xml  bg_stop_button.xml  ic_hamburger.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
model/: model_definition.py
specs/: kernel_spec.md
tools/: apd_ui_mock.html  compare_inference.py  verify_apd.py
training/: augmentation.py  config.py  export_apd.py  loss.py  manifest.py  preprocess.py  prune_finetune.py  pseudo_label.py  train_ddp.py
